# OSuRV_2024

Robots/RC_Car/: README.md  SETUP.md
Robots/RC_Car/master/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.fish  local_setup.sh  setup.fish
Robots/RC_Car/master/devel/lib/pkgconfig/: dusantest.pc  joy_reader.pc
Robots/RC_Car/master/devel/share/dusantest/cmake/: dusantestConfig.cmake
Robots/RC_Car/master/devel/share/joy_reader/cmake/: joy_readerConfig.cmake
Robots/RC_Car/master/src/dusantest/: CMakeLists.txt
Robots/RC_Car/master/src/dusantest/launch/: joy.launch
Robots/RC_Car/master/src/joy_reader/: package.xml
Robots/RC_Car/master/src/joy_reader/launch/: joy.launch
Robots/RC_Car/master/src/joy_reader/src/: joy_remapper.py
Robots/RC_Car/vezba07_kernel_utils/ROS/arm_and_chassis_ws/: flow.sh  tmuxer.cfg.py  tmuxer.py
Robots/RC_Car/vezba07_kernel_utils/ROS/arm_and_chassis_ws/old_build/: CMakeCache.txt  CTestConfiguration.ini  catkin_make.cache
Robots/RC_Car/vezba07_kernel_utils/ROS/arm_and_chassis_ws/old_build/atomic_configure/: .rosinstall.Q2ACe  local_setup.fish.legxs  local_setup.sh.r0YOT  setup.fish.mOBnJ  setup.sh.K5Mot
Robots/RC_Car/vezba07_kernel_utils/Remote_Joy/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.fish  local_setup.sh  setup.fish  setup.sh
Robots/RC_Car/vezba07_kernel_utils/Remote_Joy/src/joy_reader/: CMakeLists.txt  package.xml
Robots/RC_Car/vezba07_kernel_utils/Remote_Joy/src/joy_reader/launch/: joy.launch
Robots/RC_Car/vezba07_kernel_utils/SW/Driver/motor_ctrl/: bldc.c  main.c
(+25 files in other folders)
